site V3.6.3: removed scripts from all pages on mobile, refractored JS, fixed nav bar bug on landing page

--- a/public/stylesheets/portfolio.css
+++ b/public/stylesheets/portfolio.css
@@ -186,7 +186,7 @@ p {
     right: 89%;
     top: 20%;
     zoom: 2;
-    z-index: -10;
+    z-index: 10;
 }
 #dropdownMenuButton {
     color: white !important;
